--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -36,6 +36,7 @@ stringData:
     TOOLS_STATPING_ADMIN_PASSWORD: ENC[AES256_GCM,data:ydCH2jWrGPMaeYLsGkg=,iv:+J7uWq2SGfyKD/SP8JNZjhynpgciJBDXfYiEtovdVZM=,tag:9UpgT8hIkPzy8f10ekfZNw==,type:str]
     TOOLS_TRAGGO_DEFAULT_USER: ENC[AES256_GCM,data:9Yr7Bmpa1CyHJTc=,iv:TtdmJTVLXngG1DJGFNkaBd97gdKiiehf0Oc0kSjhX7Q=,tag:m4G/3vf+rylAVEFkT/cLZQ==,type:str]
     TOOLS_TRAGGO_DEFAULT_PASS: ENC[AES256_GCM,data:ZLofLUMLR5kr1Gv9GCpA,iv:DbfxS1esmehMfL/M8V/tqO2R3RU6kfqECIb4BmcWszk=,tag:FPUGW53iGpwWusi6/263Sw==,type:str]
+    TOOLS_SNAPP_UMAMI_ID: ENC[AES256_GCM,data:/RwH76/+3z6sNFu5wz2Wwy+/H+FwFLxL9rTcl32/Xe0j9jN4,iv:wG26WwoHPxa9BX6AHwrYd2wDxqblORFGGuUKukPiVug=,tag:G4S2E49s/QubL2cR2RGrlA==,type:str]
     TOOLS_SHLINK_GEOIP_LICENSE: ENC[AES256_GCM,data:ykNAWRDGnYXC6FsEBpvOuw==,iv:CnMpHNm08mN2HiXIsN407ZIkF7hWIqJZFlQDvcaoA7Y=,tag:kKxhZJxUn5xJS59tSYkDUw==,type:str]
     TOOLS_GUAC_USERNAME: ENC[AES256_GCM,data:x5SUAAL+LMmP50VOoU2w,iv:ihtnxOc7luQH/XhI+IggzakQQZJQYmKS61pxkGC6aaY=,tag:r7WCk8B2JyfCIggeHOuxCA==,type:str]
     TOOLS_GUAC_PASSWORD: ENC[AES256_GCM,data:roOGsyFbwdWbPlzUaOoh9akbvw==,iv:a4ZB3LO2e7+ziP+pVlR4lArYLrYf40wn7xUTRuM8Moc=,tag:Wob5C6A/n9yWcGT2ysGsWw==,type:str]
@@ -61,8 +62,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-28T20:15:31Z"
-    mac: ENC[AES256_GCM,data:RxOnpnusQbvy+955TqFUlyS5ZT0NM8kE4Z9xwQI3MMHnLD7fyKddf5tuTv+5s0+MJO2w9d5FHVfnfJDnPwter6MyZWUyxBtYjD1/GJ/620Fbsqq2edH3KSQZxIUGTiHX9Lhdc45bUAGPVcdXNRqKCJo+8mTO0oGP70X0DeT5UNI=,iv:UhU1fV3Km8noAc1SsHQsREkCKXwPqFhE7lg738Te8Lw=,tag:cWnfFdPsE4Wlx/mx2T0CJw==,type:str]
+    lastmodified: "2024-01-24T21:08:43Z"
+    mac: ENC[AES256_GCM,data:tAzCNxzYV6VNDqkcTF6ip2rlNgovlUY9xPIqpZNSYRzeZshpUtyoe3tbKZALMLAiITkj+X1jroSHXlyFnozfu2WJbB8SgE/+pKiRyiC+YEAOFEm45rI7xs027I0JJ/1zqldEx2cqBi0STh3f0hNFLTlUN+zpOayTHw5tfMPhCpE=,iv:7sjlwfgVKpAWXt91++KMHk31TtmVCrUAu7yYdSoQZtk=,tag:9BrN4dqvcPOaiq2LNzEfGw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.7.3
