snapp: remove default passwords

--- a/cluster/apps/tools/snapp/helm-release.yaml
+++ b/cluster/apps/tools/snapp/helm-release.yaml
@@ -25,14 +25,15 @@ spec:
               tag: latest
             env:
               TIMEZONE: America/Chicago
-              ADMIN_USERNAME: admin
-              ADMIN_EMAIL: admin@snapp.li
-              ADMIN_PASSWORD: password
-              PUBLIC_URL: https://sprk.sh
+              ADMIN_USERNAME: ${TOOLS_SNAPP_ADMIN_USER}
+              ADMIN_EMAIL: ${TOOLS_SNAPP_ADMIN_EMAIL}
+              ADMIN_PASSWORD: ${TOOLS_SNAPP_ADMIN_PASSWORD}
               ORIGIN: https://sprk.sh
-              WEBSITE_ID: ${TOOLS_SNAPP_UMAMI_ID}
-              UMAMI_URL: https://umami.is
+              NODE_ENV: development
+              # WEBSITE_ID: ${TOOLS_SNAPP_UMAMI_ID}
+              # UMAMI_URL: https://umami.is
               ENABLE_MULTIUSER: false
+              DISABLE_HOME: true
               DATRABASE_URL: 'file:./config_persistent/db.sqlite'
     service:
       main:
