--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -36,6 +36,9 @@ stringData:
     TOOLS_STATPING_ADMIN_PASSWORD: ENC[AES256_GCM,data:ydCH2jWrGPMaeYLsGkg=,iv:+J7uWq2SGfyKD/SP8JNZjhynpgciJBDXfYiEtovdVZM=,tag:9UpgT8hIkPzy8f10ekfZNw==,type:str]
     TOOLS_TRAGGO_DEFAULT_USER: ENC[AES256_GCM,data:9Yr7Bmpa1CyHJTc=,iv:TtdmJTVLXngG1DJGFNkaBd97gdKiiehf0Oc0kSjhX7Q=,tag:m4G/3vf+rylAVEFkT/cLZQ==,type:str]
     TOOLS_TRAGGO_DEFAULT_PASS: ENC[AES256_GCM,data:ZLofLUMLR5kr1Gv9GCpA,iv:DbfxS1esmehMfL/M8V/tqO2R3RU6kfqECIb4BmcWszk=,tag:FPUGW53iGpwWusi6/263Sw==,type:str]
+    TOOLS_SNAPP_ADMIN_USER: ENC[AES256_GCM,data:Tv0Yt0Cx,iv:OUNQ1IsBWlP4ZHFO9UT9quU28ISynymc/J1TUAYqH2k=,tag:87/b3FQAm5BKaRMkhWa2MA==,type:str]
+    TOOLS_SNAPP_ADMIN_PASSWORD: ENC[AES256_GCM,data:jJyzHAja7Y6OlvLKi10tf0eTISQ=,iv:0YGjka/iUi7hSwzGnMpDlDfZ9ucLOkS7SN9gQ2fogvM=,tag:TqNlwjezad7SR67e4kHzWw==,type:str]
+    TOOLS_SNAPP_ADMIN_EMAIL: ENC[AES256_GCM,data:exIQ3NQYw9XMUqcTWA==,iv:Qh4uFPM3ToR5LeyVrnH/ywcDaF2EPOfOtda4+C7KsTw=,tag:bn3NcWq8l0I/Ay+Spe0/gA==,type:str]
     TOOLS_SNAPP_UMAMI_ID: ENC[AES256_GCM,data:/RwH76/+3z6sNFu5wz2Wwy+/H+FwFLxL9rTcl32/Xe0j9jN4,iv:wG26WwoHPxa9BX6AHwrYd2wDxqblORFGGuUKukPiVug=,tag:G4S2E49s/QubL2cR2RGrlA==,type:str]
     TOOLS_SHLINK_GEOIP_LICENSE: ENC[AES256_GCM,data:ykNAWRDGnYXC6FsEBpvOuw==,iv:CnMpHNm08mN2HiXIsN407ZIkF7hWIqJZFlQDvcaoA7Y=,tag:kKxhZJxUn5xJS59tSYkDUw==,type:str]
     TOOLS_GUAC_USERNAME: ENC[AES256_GCM,data:x5SUAAL+LMmP50VOoU2w,iv:ihtnxOc7luQH/XhI+IggzakQQZJQYmKS61pxkGC6aaY=,tag:r7WCk8B2JyfCIggeHOuxCA==,type:str]
@@ -62,8 +65,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-24T21:08:43Z"
-    mac: ENC[AES256_GCM,data:tAzCNxzYV6VNDqkcTF6ip2rlNgovlUY9xPIqpZNSYRzeZshpUtyoe3tbKZALMLAiITkj+X1jroSHXlyFnozfu2WJbB8SgE/+pKiRyiC+YEAOFEm45rI7xs027I0JJ/1zqldEx2cqBi0STh3f0hNFLTlUN+zpOayTHw5tfMPhCpE=,iv:7sjlwfgVKpAWXt91++KMHk31TtmVCrUAu7yYdSoQZtk=,tag:9BrN4dqvcPOaiq2LNzEfGw==,type:str]
+    lastmodified: "2024-01-24T21:24:37Z"
+    mac: ENC[AES256_GCM,data:hVRxveDWFPjiRTlS2OktR3pEPsnSQR9gIfsowMLTY/f0fgP7KJeO7yEhFI+Y1pN9o6jngfc/0nbWI8OaVoKLEPsvj5VEs3LeiIqf6YFr59fSGARLaxG+9nwHRGNgxEM8qBfYLEuYfijhNbYFudNZS/OPXer8dUh4HQYPog1bdqI=,iv:kswCBbDDpY4M+0gGdPCauSf/h9SwIj9RCo7r4ja6BCU=,tag:J/yR0/Kj4tIAgr6r5c68Zg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.7.3
