littlelinks: update to use sprk.sh addresses

--- a/cluster/apps/tools/littlelink/helm-release.yaml
+++ b/cluster/apps/tools/littlelink/helm-release.yaml
@@ -35,17 +35,25 @@ spec:
               AVATAR_ALT: Thomas Ibarra <hello@imake.software>
               NAME: Thomas Ibarra
               BIO: Chip-to-Ship, Super-heroic Software Engineer.
-              GITHUB: https://github.com/SparksD2145
+              BUTTON_ORDER: GITHUB,LINKED_IN,SOUND_CLOUD,TUMBLR,YOUTUBE
+              # CUSTOM_BUTTON_TEXT: Documentation,Recommended Gear
+              # CUSTOM_BUTTON_URL: https://l.technotim.live/docs,https://l.technotim.live/gear
+              # CUSTOM_BUTTON_COLOR: '#000000,#000000'
+              # CUSTOM_BUTTON_TEXT_COLOR: '#ffffff,#ffffff'
+              # CUSTOM_BUTTON_ALT_TEXT: Tech documentation site for my videos and more,Recommended Gear
+              # CUSTOM_BUTTON_NAME: DOCUMENTATION,GEAR
+              # CUSTOM_BUTTON_ICON: fas file-alt,fas fa-cog
+              GITHUB: https://sprk.sh/github
               # TWITTER: https://sprk.sh/twitter
               # INSTAGRAM: https://www.instagram.com/techno.tim
-              YOUTUBE: https://www.youtube.com/@ThomasIbarra
+              YOUTUBE: https://sprk.sh/youtube
               # TWITCH: https://www.twitch.tv/technotim/
               # DISCORD: https://discord.gg/DJKexrJ
               # TIKTOK: https://www.tiktok.com/@technotim
               # KIT: https://kit.co/TechnoTim
               # FACEBOOK: https://facebook.com
               # FACEBOOK_MESSENGER: https://facebook.com
-              LINKED_IN: https://linkedin.com/in/SparksD2145
+              LINKED_IN: https://sprk.sh/linkedin
               # PRODUCT_HUNT: https://www.producthunt.com/
               # SNAPCHAT: https://www.snapchat.com/
               # SPOTIFY: https://www.spotify.com/
@@ -54,10 +62,10 @@ spec:
               # PINTEREST: https://www.pinterest.com/
               # EMAIL: hello@imake.software
               # EMAIL_ALT: you@example.com
-              SOUND_CLOUD: https://soundcloud.com/SparksD2145
+              SOUND_CLOUD: https://sprk.sh/soundcloud
               # FIGMA: https://figma.com
               # TELEGRAM: https://telegram.org/
-              # TUMBLR: https://www.tumblr.com/
+              TUMBLR: https://sprk.sh/tumblr
               # STEAM: https://steamcommunity.com/
               # VIMEO: https://vimeo.com/
               # WORDPRESS: https://wordpress.com/
