filebrowser: activate with ceph storage

--- a/cluster/apps/media/filebrowser/helm-release.yaml
+++ b/cluster/apps/media/filebrowser/helm-release.yaml
@@ -56,14 +56,19 @@ spec:
     persistence:
       config:
         enabled: true
-        type: pvc
-        existingClaim: local-data-sparks-codes-config
+        type: persistentVolumeClaim
+        accessMode: ReadWriteMany
+        storageClass: ceph-filesystem
+        size: 8Gi
+        retain: true
         globalMounts:
           - path: /config
       data:
         enabled: true
-        type: pvc
-        existingClaim: local-data-sparks-codes-data
+        type: persistentVolumeClaim
+        accessMode: ReadWriteMany
+        storageClass: ceph-filesystem
+        size: 8Gi
         retain: true
         globalMounts:
           - path: /srv
