--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - bungeecord
-  - cwh11
-  - cwh11-archive
-  # - superdigdug
+  # - cwh11
+  # - cwh11-archive
+  - superdigdug
+  - superdigdug-sparks
