--- a/cluster/apps/games/minecraft/superdigdug-rectify/helm-release.yaml
+++ b/cluster/apps/games/minecraft/superdigdug-rectify/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: minecraft-superdigdug
+  name: minecraft-superdigdug-rectify
   namespace: games
 spec:
   interval: 15m
@@ -24,29 +24,29 @@ spec:
       services/minecraft: active
     resources:
       requests:
-        memory: 8192Mi
-        cpu: 600m
+        memory: 6144Mi
+        cpu: 200m
     minecraftServer:
       eula: "TRUE"
       version: "1.20.4"
       type: SPIGOT
-      motd: "superdigdug.mc.sparks.codes"
+      motd: "superdigdug-rectify.mc.sparks.codes"
       difficulty: normal
       ops: "superdigdug"
-      worldSaveName: Overworld
+      worldSaveName: superdigdug_rectify
       maxPlayers: 20
       viewDistance: 14
       # levelSeed:
       gameMode: survival
       pvp: true
       onlineMode: false
-      memory: 8192M
+      memory: 6144M
       serviceType: LoadBalancer
-      loadBalancerIP: 10.10.202.4
+      loadBalancerIP: 10.10.202.7
       rcon:
         enabled: true
         password: ${GAMES_MINECRAFT_BUNGEECORD_RCON_PASSWORD}
     persistence:
       dataDir:
         enabled: true
-        existingClaim: local-mc-superdigdug
+        existingClaim: local-mc-superdigdug-rectify
