--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -2,7 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - bungeecord
-  # - cwh11
-  # - cwh11-archive
+  - cwh11
+  - cwh11-archive
   - superdigdug
   - superdigdug-sparks
+  - superdigdug-rectify
+  - superdigdug-newlands
+  - superdigdug-wilderness
