minecraft: adjust volume definition

--- a/cluster/apps/games/minecraft/superdigdug-overworld/helm-release.yaml
+++ b/cluster/apps/games/minecraft/superdigdug-overworld/helm-release.yaml
@@ -49,4 +49,4 @@ spec:
     persistence:
       dataDir:
         enabled: true
-        existingClaim: local-mc-superdigdug
+        existingClaim: local-mc-superdigdug-overworld
