--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - bungeecord
   - cwh11
   - cwh11-archive
-  # - superdigdug
+  - superdigdug
   - superdigdug-overworld
   - superdigdug-sparks
   - superdigdug-rectify
