--- a/cluster/apps/games/minecraft/superdigdug/helm-release.yaml
+++ b/cluster/apps/games/minecraft/superdigdug/helm-release.yaml
@@ -33,10 +33,10 @@ spec:
       motd: "superdigdug.mc.sparks.codes"
       difficulty: normal
       ops: "superdigdug"
-      worldSaveName: Overworld
+      worldSaveName: flux
       maxPlayers: 20
       viewDistance: 14
-      # levelSeed:
+      levelSeed: '1123197228000674286'
       gameMode: survival
       pvp: true
       onlineMode: false
