--- a/cluster/apps/games/minecraft/cwh11-archive/external-name.yaml
+++ b/cluster/apps/games/minecraft/cwh11-archive/external-name.yaml
@@ -5,7 +5,7 @@ metadata:
   name: archive-cwh11-mc-sparks-codes
   namespace: games
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: archive-cwh11.mc.sparks.codes
+    external-dns.alpha.kubernetes.io/hostname: cwh11-archive.mc.sparks.codes
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
 spec:
   type: ExternalName
