overseer,lidarr: undeploy, deploy

--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
   - filebrowser
   # - ghost
   - jellyfin
+  - lidarr
   - monica
-  - overseerr
   - photoprism
   - prowlarr
   - qbittorrent
