--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -40,6 +40,7 @@ spec:
               privileged: true
     service:
       main:
+        controller: main
         ports:
           http:
             port: 8080
@@ -62,7 +63,8 @@ spec:
               - path: "/"
                 pathType: "Prefix"
                 service:
-                  name: main
+                  identifier: main
+                  port: http
         tls:
           - hosts:
               - zigbee2mqtt.sparks.codes
