--- a/cluster/apps/media/calibre/calibre/helm-release.yaml
+++ b/cluster/apps/media/calibre/calibre/helm-release.yaml
@@ -33,6 +33,7 @@ spec:
               CLI_ARGS:
     service:
       main:
+        controller: main
         ports:
           http:
             port: 8080
@@ -59,7 +60,8 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
+                  identifier: main
+                  port: http
         tls:
           - hosts:
               - "books-backend.sparks.codes"
