--- a/cluster/apps/media/ghost/helm-release-ghost.yaml
+++ b/cluster/apps/media/ghost/helm-release-ghost.yaml
@@ -34,6 +34,7 @@ spec:
               NODE_ENV: production
     service:
       main:
+        controller: main
         ports:
           http:
             port: 2368
