--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -28,6 +28,7 @@ spec:
               RUTORRENT_PORT: 8080
     service:
       main:
+        controller: main
         ports:
           http:
             port: 8080
@@ -47,7 +48,8 @@ spec:
               - path: "/"
                 pathType: "Prefix"
                 service:
-                  name: main
+                  identifier: main
+                  port: http
         tls:
           - hosts:
               - torrents.sparks.codes
