--- a/cluster/apps/home/esphome/helm-release.yaml
+++ b/cluster/apps/home/esphome/helm-release.yaml
@@ -54,6 +54,7 @@ spec:
         size: 5Gi
     service:
       main:
+        controller: main
         ports:
           http:
             port: 6052
@@ -74,7 +75,8 @@ spec:
               - path: "/"
                 pathType: "Prefix"
                 service:
-                  name: main
+                  identifier: main
+                  port: http
         tls:
           - secretName: acme-crt-secret-sparks-codes
             hosts:
