--- a/cluster/apps/media/tubesync/helm-release.yaml
+++ b/cluster/apps/media/tubesync/helm-release.yaml
@@ -41,7 +41,8 @@ spec:
               - path: "/"
                 pathType: "Prefix"
                 service:
-                  name: main
+                  identifier: main
+                  port: http
         tls:
           - hosts:
               - tubesync.sparks.codes
@@ -58,6 +59,7 @@ spec:
         retain: true
     service:
       main:
+        controller: main
         ports:
           http:
             port: 4848
