--- a/cluster/apps/tools/homebox/helm-release.yaml
+++ b/cluster/apps/tools/homebox/helm-release.yaml
@@ -36,6 +36,7 @@ spec:
                 memory: 256M
     service:
       main:
+        controller: main
         ports:
           http:
             port: 7745
@@ -55,7 +56,8 @@ spec:
               - path: "/"
                 pathType: "Prefix"
                 service:
-                  name: main
+                  identifier: main
+                  port: http
         tls:
           - hosts:
               - inventory.sparks.codes
