--- a/cluster/apps/tools/netboot.xyz/helm-release.yaml
+++ b/cluster/apps/tools/netboot.xyz/helm-release.yaml
@@ -27,6 +27,7 @@ spec:
       hostNetwork: true
     service:
       main:
+        controller: main
         ports:
           http:
             port: 3000
@@ -72,7 +73,8 @@ spec:
               - path: "/"
                 pathType: "Prefix"
                 service:
-                  name: main
+                  identifier: main
+                  port: http
         tls:
           - hosts:
               - netboot.sparks.codes
