--- a/cluster/apps/tools/uptime-kuma/helm-release.yaml
+++ b/cluster/apps/tools/uptime-kuma/helm-release.yaml
@@ -27,6 +27,7 @@ spec:
               TZ: "America/Chicago"
     service:
       main:
+        controller: main
         ports:
           http:
             port: 3001
@@ -59,7 +60,8 @@ spec:
               - path: "/"
                 pathType: "Prefix"
                 service:
-                  name: main
+                  identifier: main
+                  port: http
         tls:
           - hosts:
               - uptime.sparks.codes
