--- a/cluster/apps/tools/kustomization.yaml
+++ b/cluster/apps/tools/kustomization.yaml
@@ -3,7 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # - idrac6
-  - guacamole
   - littlelink
   - mailserver
   - netboot.xyz
@@ -12,4 +11,5 @@ resources:
   - hajimari
   - homebox
   - shlink
+  - sshwifty
   - uptime-kuma
