--- a/cluster/apps/tools/mailserver/helm-release.yaml
+++ b/cluster/apps/tools/mailserver/helm-release.yaml
@@ -16,6 +16,7 @@ spec:
         namespace: flux-system
       interval: 15m
   values:
+    # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.0.1/charts/library/common/values.schema.json
     controllers:
       main:
         containers:
