provision: use local connection for ipmi-power

--- a/provision/ansible/playbooks/servers/ipmi-power.yaml
+++ b/provision/ansible/playbooks/servers/ipmi-power.yaml
@@ -1,6 +1,7 @@
 ---
 - hosts: servers_with_idracs
   gather_facts: false
+  connection: local
   become: false
   vars_prompt:
     - name: ipmi_password
